# os

./: Cargo.toml  Makefile
.cargo/: config.toml
config/: grub.cfg  linker.ld  os-target.json
multiboot_modules/: proc1  proc2
scripts/: gdb.py  page_table.py  stacktrace.py
src/: lib.rs  locks.rs  log.rs  logging.rs  multiboot.rs  stacktrace.rs
src/arch/: mod.rs
src/arch/x86_64/: mod.rs
src/arch/x86_64/acpi/: mod.rs
src/arch/x86_64/apic/: ioapic.rs  lapic.rs  mod.rs
src/arch/x86_64/asm/: ap_boot.asm  boot.asm  checks.asm  kernel.asm  long_mode_start.asm  page.asm
src/arch/x86_64/elf/: mod.rs
src/arch/x86_64/gdt/: mod.rs
src/arch/x86_64/interrupts/: idt.rs  isr.rs  mod.rs
src/arch/x86_64/paging/: entry.rs  mmio.rs  mod.rs  mtrr.rs  page.rs  pat.rs  table.rs
src/arch/x86_64/pci/: mod.rs
src/arch/x86_64/pic/: mod.rs
src/arch/x86_64/port/: asm.rs  inout.rs  mod.rs
src/arch/x86_64/process/: create.rs  delay.rs  lock.rs  mod.rs  pid.rs  process.rs  scheduler.rs
src/arch/x86_64/smp/: mod.rs
src/arch/x86_64/syscall/: mod.rs
src/arch/x86_64/timers/: hpet.rs  mod.rs
src/arch/x86_64/userspace/: mod.rs
src/arch/x86_64/vga_buffer/: character.rs  mod.rs  (+1 more)
src/asm/: boot.asm  long_mode_start.asm  page.asm
src/config/: bochsrc  linker.ld
src/interrupts/: mod.rs
src/locks/: mod.rs  spinlock.rs  spinlock_irq.rs
src/mem/: frame.rs  mod.rs
src/mem/allocator/: area_allocator.rs  bitmap_allocator.rs  mod.rs
src/stacktrace/: eh_frame.rs  frame_pointer.rs  mod.rs
src/vfs/: memfs.rs  mod.rs
src/vga_buffer/: character.rs  mod.rs  writer.rs
