[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.5.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
paste = "1.0.11"
bitflags = "1.3.2"
log = "0.4.21"
gimli = { version = "0.27.2", default-features = false, features = ["read"] }
# mini-backtrace = "0.1.4"
# unwinding = { version = "0.2", default-features = false, features = ["unwinder", "fde-static", "personality", "panic", "dwarf-expr"] }

[lib]
crate-type = ["staticlib"]
