[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.5.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
paste = "1.0.11"
bitflags = "1.3.2"
log = "0.4.21"
gimli = { version = "0.27.2", default-features = false, features = ["read"] }
hashbrown = "0.14"
goblin = { version = "0.8.2", default-features = false, features = ["elf32", "elf64", "endian_fd"] }

[lib]
crate-type = ["staticlib"]

[features]
eh_frame = []
